{
    "name": "TouchAction",
    "maps": [
        {
            "name": "Touch",
            "id": "bf3c1edb-268a-45ff-8e4c-3bdadd9ab0ec",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "f96f5ba2-c27b-447c-96df-20f3d0ebd8c5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "64ec2fdf-9a65-445c-a491-20bc9d2b4fd5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchHold",
                    "type": "Button",
                    "id": "38a2fd1c-ff40-4c5f-b138-81000293f559",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4582e48f-38dc-422f-91b9-6e680e383440",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "505baa9b-6f18-44a1-b752-a18ce608faf9",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d979fd9-70f6-4382-b685-63dbd7672c81",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "TouchHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}